# oxyon

./: .gitignore  Cargo.toml  Contributing.md  ISSUE_ORGANIZATION_GUIDE.md  LICENSE.txt  README.md  README_CLI.md  Roadmap.md  build.rs  config.toml  example.env  key.env  manifest.md  oxyon_config.toml  oxyon_icon.rc
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
Licences/: ExifTool - Artistic License - GNU GPL.txt
assets/: io.github.promethyxx.Oxyon.desktop  io.github.promethyxx.Oxyon.metainfo.xml
src/: cli.rs  logging.rs  main.rs  main_cli.rs  test.rs
src/modules/: archive.rs  audio.rs  binaries.rs  doc.rs  image.rs  mod.rs  pic.rs  rename.rs  scrap.rs  tag.rs  video.rs
tests/: A.tsv  Renamer.xml
tests/doc/: DOCX.docx  HTML.html  MD.md  NFO.nfo  TEX.tex  TXT.txt
tests/pic/: AVIF.avif
tests/scrap/: Wasabi (2001)-mulpy.nfo  Wasabi (2001)-oxyon.nfo
