[package]
name = "oxyon"
version = "1.3.4"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4.43"
dotenvy = "0.15"
eframe = "0.29"
flate2 = "1.1"
image = { version = "0.25", features = ["avif", "exr", "gif", "hdr", "ico", "jpeg", "png", "tiff", "webp"] }
kamadak-exif = "0.5"
lopdf = "0.38"
psd = "0.3"
quick-xml = "0.39.0"
rawloader = "0.37"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
resvg = "0.44"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sevenz-rust2 = { version = "0.20", features = ["compress"] }
tar = "0.4"
tiny-skia = "0.11"
toml = "0.8"
usvg = "0.44"
which = "8.0.0"
zip = { version = "7.1", default-features = false, features = ["deflate"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 0
lto = false
codegen-units = 256
strip = true

[profile.dist]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1

[features]
default = ["api"]
api = []