[package]
name = "oxyon"
version = "1.4.1"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4.43"
dotenvy = "0.15"
eframe = "0.33.3"
flate2 = "1.1"
image = { version = "0.25", features = ["avif", "exr", "gif", "hdr", "ico", "jpeg", "png", "tiff", "webp"] }
kamadak-exif = "0.6.1"
lopdf = "0.39"
psd = "0.3"
quick-xml = "0.39.0"
rawloader = "0.37"
regex = "1.10"
reqwest = { version = "0.13", features = ["blocking", "json", "query"] }
resvg = "0.47"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sevenz-rust2 = { version = "0.20", features = ["compress"] }
tar = "0.4"
toml = "1.0.3"
which = "8.0.0"
zip = { version = "8.1", default-features = false, features = ["deflate"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 0
lto = false
codegen-units = 256
strip = true

[profile.dist]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1

[features]
default = ["api", "bundled"]
api = []
bundled = []